--- a/ansible-playbook.yaml
+++ b/ansible-playbook.yaml
@@ -1,3 +1,4 @@
+# ansible-playbook ansible-playbook.yaml -i localhost -K
 ---
 - name: "Playing with Ansible and Git"
   hosts: localhost
@@ -10,7 +11,7 @@
 
     - debug: "var=output.stdout_lines"
 
-    - name: Update all packages to their latest version
-      ansible.builtin.apt:
-        name: "*"
-        state: latest
+    - include: "install/apt-playbook.yaml"
+    - include: "install/flatpak-playbook.yaml"
+    - include: "install/snap-playbook.yaml"
+
