--- a/install/apt-playbook.yaml
+++ b/install/apt-playbook.yaml
@@ -1,13 +1,14 @@
 - name: Ansible apt install packages
   apt:
-    name: 
-      - file-roller                  # Archive manager
-      - gnome-disk-utility           # Disk utility
-      - evince                       # PDF viewer
-      - gedit                        # Text editor
-      - git-all                      # Git
-      - dconf-editor                 # Dconf editor
-      - terminator                   # Terminal emulator
-      - gnome-tweaks                 # GNOME tweaks
-      - virt-manager                 # Virtual machine manager
+    name:
+      - file-roller # Archive manager
+      - gnome-disk-utility # Disk utility
+      - evince # PDF viewer
+      - gedit # Text editor
+      - git-all # Git
+      - dconf-editor # Dconf editor
+      - terminator # Terminal emulator
+      - gnome-tweaks # GNOME tweaks
+      - virt-manager # Virtual machine manager
+      - gnome-shell-extension-manager # GNOME shell extension manager
     state: latest
