--- a/install/apt-playbook.yaml
+++ b/install/apt-playbook.yaml
@@ -6,9 +6,12 @@
       - evince # PDF viewer
       - gedit # Text editor
       - git-all # Git
+      - gparted # Partition editor
       - dconf-editor # Dconf editor
       - terminator # Terminal emulator
       - gnome-tweaks # GNOME tweaks
+      - piper # Mouse configuration
       # - virt-manager # Virtual machine manager
       - gnome-shell-extension-manager # GNOME shell extension manager
+      - vlc # Video player
     state: latest
