--- a/install/manual-playbook.yaml
+++ b/install/manual-playbook.yaml
@@ -1,44 +1,44 @@
-- name: Download the NordVPN file
-  get_url:
-    url: https://repo.nordvpn.com/deb/nordvpn/debian/pool/main/nordvpn-release_1.0.0_all.deb
-    dest: "/home/{{ ansible_user }}/Downloads/nordvpn-release_1.0.0_all.deb"
+# - name: Download the NordVPN file
+#   get_url:
+#     url: https://repo.nordvpn.com/deb/nordvpn/debian/pool/main/nordvpn-release_1.0.0_all.deb
+#     dest: "/home/{{ ansible_user }}/Downloads/nordvpn-release_1.0.0_all.deb"
 
-- name: Install the NordVPN Repo
-  apt:
-    deb: "/home/{{ ansible_user }}/Downloads/nordvpn-release_1.0.0_all.deb"
+# - name: Install the NordVPN Repo
+#   apt:
+#     deb: "/home/{{ ansible_user }}/Downloads/nordvpn-release_1.0.0_all.deb"
 
-- name: "Update all packages to their latest version"
-  apt:
-    name: "*"
-    state: latest
-    force_apt_get: yes
+# - name: "Update all packages to their latest version"
+#   apt:
+#     name: "*"
+#     state: latest
+#     force_apt_get: yes
     
-- name: Install the NordVPN package
-  apt:
-    name: nordvpn
-    state: latest
-    force_apt_get: yes
+# - name: Install the NordVPN package
+#   apt:
+#     name: nordvpn
+#     state: latest
+#     force_apt_get: yes
 
-- name: Add APT key for Brave repositories
-  apt_key:
-    url: https://brave-browser-apt-release.s3.brave.com/brave-browser-archive-keyring.gpg
-    state: present  
+# - name: Add APT key for Brave repositories
+#   apt_key:
+#     url: https://brave-browser-apt-release.s3.brave.com/brave-browser-archive-keyring.gpg
+#     state: present  
 
-- name: Install Brave Package
-  apt:
-    name: brave-browser
-    state: latest
+# - name: Install Brave Package
+#   apt:
+#     name: brave-browser
+#     state: latest
 
-- name: Add APT key for Github-cli repositories
-  apt_key:
-    url: https://cli.github.com/packages/githubcli-archive-keyring.gpg
-    state: present  
+# - name: Add APT key for Github-cli repositories
+#   apt_key:
+#     url: https://cli.github.com/packages/githubcli-archive-keyring.gpg
+#     state: present  
 
-- name: Install Github-CLI Package
-  apt:
-    name: gh
-    state: latest
+# - name: Install Github-CLI Package
+#   apt:
+#     name: gh
+#     state: latest
 
-- name: Install VSCode Package
-  apt:
-    deb: https://go.microsoft.com/fwlink/?LinkID=760868
+# - name: Install VSCode Package
+#   apt:
+#     deb: https://go.microsoft.com/fwlink/?LinkID=760868
