Add new flatpak packages and update existing ones

--- a/install/flatpak-playbook.yaml
+++ b/install/flatpak-playbook.yaml
@@ -12,21 +12,24 @@
 - name: Install list of packages
   community.general.flatpak:
     name:
+      - ca.desrt.dconf-editor
       - com.anydesk.Anydesk
       - com.belmoussaoui.Authenticator
       - com.bitwarden.desktop
+      - com.brave.Browser
       - com.calibre_ebook.calibre
       - com.getpostman.Postman
+      - com.github.tchx84.Flatseal
       - com.google.Chrome
+      - com.mattjakeman.ExtensionManager
       - com.mongodb.Compass
+      - com.obsproject.Studio
       - com.redis.RedisInsight
       - com.slack.Slack
-      - com.spotify.Client
+      - com.visualstudio.code
       - nz.mega.MEGAsync
-      - org.cryptomator.Cryptomator
-      - org.gnome.Extensions
-      - org.gnome.Firmware
+      - org.freedesktop.Piper
       - org.libreoffice.LibreOffice
       - org.mozilla.Thunderbird
-      - org.mozilla.firefox
       - org.remmina.Remmina
+      - org.videolan.VLC
