--- a/install/apt-playbook.yaml
+++ b/install/apt-playbook.yaml
@@ -1,17 +1,17 @@
 - name: Ansible apt install packages
   apt:
     name:
-      - file-roller # Archive manager
+      # - file-roller # Archive manager
       - gnome-disk-utility # Disk utility
-      - evince # PDF viewer
-      - gedit # Text editor
+      # - evince # PDF viewer
+      # - gedit # Text editor
       - git-all # Git
       - gparted # Partition editor
-      - dconf-editor # Dconf editor
+      # - dconf-editor # Dconf editor
       - terminator # Terminal emulator
       - gnome-tweaks # GNOME tweaks
-      - piper # Mouse configuration
+      # - piper # Mouse configuration
       # - virt-manager # Virtual machine manager
-      - gnome-shell-extension-manager # GNOME shell extension manager
-      - vlc # Video player
+      # - gnome-shell-extension-manager # GNOME shell extension manager
+      # - vlc # Video player
     state: latest
